package model.prefrences;

public interface UserPreference {
    //TODO: Implement

    // I don't really know what kinds of preferences I will have quite yet.
}
