@startuml

title __PREFRENCES's Class Diagram__\n

  namespace model.prefrences {
    class model.prefrences.LayoutProfile {
        - name : String
        + LayoutProfile()
        + getLayout()
        + getName()
        + setName()
    }
  }
  

  namespace model.prefrences {
    class model.prefrences.LayoutProfileManager {
        - profiles : ArrayList<LayoutProfile>
        + LayoutProfileManager()
        + addProfile()
        + getCommandString()
        + getProfiles()
        + parse()
        + toString()
    }
  }
  

  namespace model.prefrences {
    class model.prefrences.PreferenceManager {
        - preferences : ArrayList<UserPreference>
        + PreferenceManager()
        + getCommandString()
        + getPreferences()
        + parse()
        + toString()
    }
  }
  

  namespace model.prefrences {
    class model.prefrences.SerialIOController {
    }
  }
  

  namespace model.prefrences {
    interface model.prefrences.UserPreference {
    }
  }
  

  namespace model.prefrences {
    class model.prefrences.UserProfile {
        - name : String
        + UserProfile()
        + getCommandString()
        + getLayout()
        + getPreferences()
        + parse()
        + toString()
    }
  }
  

  model.prefrences.LayoutProfile o-- ui.cli.LayoutManager : layout
  model.prefrences.LayoutProfileManager .up.|> ui.cli.MenuBarItem
  model.prefrences.LayoutProfileManager o-- model.prefrences.LayoutProfile : current
  model.prefrences.PreferenceManager .up.|> ui.cli.MenuBarItem
  model.prefrences.UserProfile .up.|> ui.cli.MenuBarItem
  model.prefrences.UserProfile o-- model.prefrences.LayoutProfileManager : layout
  model.prefrences.UserProfile o-- model.prefrences.PreferenceManager : preferences


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
